test-in-env/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: test-env
  labels:
    app: proxy
spec:
  selector:
    app: proxy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9113
      targetPort: 9113
